    - WIN32CL (MSVC CL compiler) port can now create zxidjni.dll, callable from Java on Windows
    - Fixed truncated log bug (premature nul termination) in zxlog.
    - Added CANON_INOPT=1 option to ignore InclusiveNamespaces/@PrefixList as needed to work around Shib 2.1.5 IdP bug
    - Added patch  by Eric Rybinski for XML ENC padding problem reported by Sampo as OpenSSL bug 1067 back in 2005.
zxid-0.64:: 16.9.2010
    - Improved WIN32CL (MSVC CL compiler) port
    - Added extern "C" markers to headers to force C calling convention even in C++, promoting binary compatibility of libraries
    - zxcall: added sso only mode
    - zxcall: added discovery only mode and iteration option
    - zxcall: added EPR cache and session listing mode -s SID -l
    - Added Unix crypt hash to zxpasswd and zxid_pw_authn()
    - Added zxid_get_fault_status() method
    - Renamed struct zx_e_Fault_s to zxid_fault (for cleaner Java Class generation)
    - Added mockpdp.pl
    - Improved (fixed?) compatibility with SiteMinder version is R12 SP1 CR3.
zxid-0.63:: 29.7.2010
    - Added mandatory attribute contactType to Contact element in metadata
    - Supply AuthnInstant
    - Removed sed(1) dependency
    - Improved win32cl target
    - Added SubjectConfirmation
    - Added possibility of using nested EncryptedKey (Shib 2010) instead of RetrievalMethod
    - Added Recipient hint in sibling EncryptedKey case. This is sufficient to get Shib 2010 working.
    - Added SubjectConfirmationData fields to support bearer subject confirmation method
    - Added RelayState field decoding to POST profile
    - Added double quote detection inside RelayState value
    - Store authentication instant in session and use it in zxid_mk_an_stmt()
    - Reworked/created az_base() family of functions to incorporate ideas from patch by Stijn Lievens
    - Make nested EncryptedKey a config option
    - Added support for fedusername and urn:oid:1.3.6.1.4.1.5923.1.1.1.6 (aka eduPersonPrincipalName)